Update README.md with JavaFX requirement